--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   contact_picker: ^0.0.2
   geolocator: ^6.2.1
   google_sign_in: ^5.2.1
+  sqflite: ^2.0.2
+  http:
+  path_provider: ^2.0.8
+  api_cache_manager: ^1.0.2
+  inview_notifier_list: 
+  video_player:
+
+
+
 
 dev_dependencies:
   flutter_test:
